--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <header>
         <h1>Babycakes Bakery</h1>
         <nav>
-            <a href="#menu">Menu</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="menu.html">Menu</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
         </nav>
+
     </header>
 
     <main>
