--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <img src="/Users/liamandell/Babycakes/DBB21043-D049-4591-A86F-EC88B2CF4125.png" alt="Baby Icon" width="150">
+
     <title>Babycakes Bakery</title>
     <link rel="stylesheet" href="style.css" />
 </head>
