--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 
 <body>
     <header>
-        <h1>Babycakes Bakery</h1>
+        <h1>
+            <h1>
+                <img src="logo.png" alt="Babycakes Icon" class="header-icon">
+                Baby Cakes Bakery
+            </h1>
+
+        </h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="menu.html">Menu</a>
