--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <img src="/Users/liamandell/Babycakes/DBB21043-D049-4591-A86F-EC88B2CF4125.png" alt="Baby Icon" width="150"
         class="header-icon">
 
-    <title>Babycakes Bakery <img src="/Users/liamandell/Babycakes/DBB21043-D049-4591-A86F-EC88B2CF4125.png"
-            alt="Baby Icon" width="150" class="header-icon"></title>
+    <title>Babycakes Bakery </title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
